.omo/evidence/controller-webhook-split-deployment/combined/live-combined-20260727290000/admission-validating-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: "2026-07-27T16:00:37Z"
  generation: 1
  name: echo-operator.echo-smoke-combined-live-combined-20260727290000.echo.example.com
  resourceVersion: "2236347"
  uid: b1f5a237-ba1c-4ed3-a7b9-1740e413f5ec
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURlekNDQW1PZ0F3SUJBZ0lVSjFoekgxU0NjeEUxNnZxT01YK3ViZXoraUNVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1ZERlNNRkFHQTFVRUF3eEpaV05vYnkxemJXOXJaUzFqYjIxaWFXNWxaQzFzYVhabExXTnZiV0pwYm1WawpMVEl3TWpZd056STNNamt3TURBd0xXVmphRzh0YjNCbGNtRjBiM0lnZDJWaWFHOXZheUJEUVRBZUZ3MHlOakEzCk1qY3hOakF3TXpaYUZ3MHlOekEzTWpjeE5qQXdNelphTUZReFVqQlFCZ05WQkFNTVNXVmphRzh0YzIxdmEyVXQKWTI5dFltbHVaV1F0YkdsMlpTMWpiMjFpYVc1bFpDMHlNREkyTURjeU56STVNREF3TUMxbFkyaHZMVzl3WlhKaApkRzl5SUhkbFltaH [...]
    service:
      name: echo-smoke-combined-live-combined-20260727290000-echo-operator
      namespace: echo-smoke-combined-live-combined-20260727290000
      path: /validate/echo.example.com
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: echo-operator.echo-smoke-combined-live-combined-20260727290000.echo.example.com
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - example.com
    apiVersions:
    - v1alpha1
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - echoresources
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
